Fix for breaking too long usernames.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -305,6 +305,14 @@ li.media-item {
   -moz-border-radius: 5px;
   border-radius: 5px;
   z-index: 2;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  /* Non standard for webkit */
+  //word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
 }
 
 .media-view:hover,
